--- a/src/main/resources/db/changelog/changes/01-create-books-table.yml
+++ b/src/main/resources/db/changelog/changes/01-create-books-table.yml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: create-books-table
+      id: 01-create-books-table
       author: denis
       changes:
         - createTable:
@@ -31,7 +31,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: price
-                  type: bigint
+                  type: decimal
                   constraints:
                     nullable: false
               - column:
@@ -40,3 +40,9 @@ databaseChangeLog:
               - column:
                   name: cover_image
                   type: varchar(255)
+              - column:
+                  name: is_deleted
+                  type: boolean
+                  defaultValueBoolean: false
+                  constraints:
+                    nullable: false
