--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,4 +1,5 @@
-url=jdbc:mysql://localhost:3306/online_shop_db
+url=jdbc:mysql://localhost:3306/online_shop_db?createTables=true
 username=root
 password=qwer
 changeLogFile=/db/changelog/db.changelog-master.yaml
+
