the code worked

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+jwt.expiration=600000
+jwt.secret=q1w2e3r4t5y6u7i8o9p0z1x2c3v4b5n6m7a1s2d3f4
