--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,7 @@ databaseChangeLog:
       file: db/changelog/changes/04-insert-roles-table.yml
   - include:
       file: db/changelog/changes/05-create-users-roles-table.yml
+  - include:
+      file: db/changelog/changes/06-insert-users-table.yml
+  - include:
+      file: db/changelog/changes/07-insert-users-roles-table.yml
