--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+jwt.expiration=300000
+jwt.secret=hellomates1y2y3y4y5y6y7y6y5y5y4y3u2u2
