--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ server.servlet.context-path=/api
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
-jwt.expiration=300000
+jwt.expiration=3000000
 jwt.secret=hellomates1y2y3y4y5y6y7y6y5y5y4y3u2u2
