Tests for the book functionality were added. Type 'decimal' was fixed in DB

--- a/src/main/resources/db/changelog/changes/13-create-order-items-table.yml
+++ b/src/main/resources/db/changelog/changes/13-create-order-items-table.yml
@@ -30,7 +30,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: price
-                  type: decimal
+                  type: decimal(10,2)
                   constraints:
                     nullable: false
               - column:
